--- a/index.ipynb
+++ b/index.ipynb
@@ -454,11 +454,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = len(countries) - len(uni)\n",
+    "num_of_repeats = len(countries) - len(unique_countries)\n",
     "num_of_repeats  = 3 # 3"
    ]
   },
